--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Photos</title>
+  <link rel="icon" href="images/favicon.png">
 
   <!-- CSS Style Sheets -->
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -19,7 +20,7 @@
   <div class="container-fluid">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="">Andrew Bouchahine</a>
+      <a class="navbar-brand" href="index.html">Andrew Bouchahine</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavBarDemo1" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
