--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Andrew Bouchahine</title>
+  <link rel="icon" href="images/favicon.png">
 
   <!-- Google Fonts -->
 
@@ -26,7 +27,7 @@
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">Andrew Bouchahine</a>
+        <a class="navbar-brand" href="index.html">Andrew Bouchahine</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#NavBarDemo1" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
