Update to all html files plus additional photo

--- a/gallery.html
+++ b/gallery.html
@@ -92,6 +92,21 @@
 
   </ul>
 
+  <!-- Footer -->
+
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
+      <a href="https://www.youtube.com/channel/UCukqbuBTZd4qOWEfmccM5pQ/featured"><i class="social-icon fab fa-youtube"></i></a>
+      <a href="https://www.instagram.com/andrew_bouch/?hl=en"><i class="social-icon fab fa-instagram"></i></i></a>
+      <a href="mailto:ashley.bouchahine@gmail.com"><i class="social-icon fas fa-envelope"></i></a>
+      <a href="https://www.facebook.com/andrew.bouchahine"><i class="social-icon fab fa-facebook-f"></i></a>
+
+
+
+      <p class="copyright">© Copyright 2020 Andrew Bouchahine</p>
+    </div>
+  </footer>
+
 </body>
 
 </html>
