--- a/resume.html
+++ b/resume.html
@@ -49,8 +49,56 @@
         </nav>
     </section>
 
+    <!-- Testimonials -->
+
+<section class="white-section"id="testimonials">
+
+  <div id="testimonials-carousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active container-fluid">
+        <h2 class="testimonial-text">Andrew is a pleasure to work with. An absolute gem.</h2>
+        <img class="testimonial-img" src="images/ashley-profile.png" alt="Ashley Profile Picture">
+        <em>His sister</em>
+      </div>
+      <div class="carousel-item container-fluid">
+        <h2 class="testimonial-text">What are you waiting for? Hire him already!</h2>
+        <img class="testimonial-img" src="images/ashley-profile.png" alt="Ashley Profile Picture">
+        <em>Again, his sister.</em>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#testimonials-carousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#testimonials-carousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+</section>
+
+<section class="colored-section resume-download">
     <h1>Printable PDF Resume</h1>
-    <button type="button" class="btn btn-dark btn-lg download-button"></i> Download</button>
+    <div class="container-fluid">
+          <button type="button" class="btn btn-dark btn-lg download-button"></i> Download</button>
+    </div>
+</section>
+
+<!-- Footer -->
+
+<footer class="white-section" id="footer">
+  <div class="container-fluid">
+    <a href="https://www.youtube.com/channel/UCukqbuBTZd4qOWEfmccM5pQ/featured"><i class="social-icon fab fa-youtube"></i></a>
+    <a href="https://www.instagram.com/andrew_bouch/?hl=en"><i class="social-icon fab fa-instagram"></i></i></a>
+    <a href="mailto:ashley.bouchahine@gmail.com"><i class="social-icon fas fa-envelope"></i></a>
+    <a href="https://www.facebook.com/andrew.bouchahine"><i class="social-icon fab fa-facebook-f"></i></a>
+
+
+
+    <p class="copyright">© Copyright 2020 Andrew Bouchahine</p>
+  </div>
+</footer>
 
   </body>
 </html>
