Update profile picture path

--- a/resume.html
+++ b/resume.html
@@ -57,12 +57,12 @@
     <div class="carousel-inner">
       <div class="carousel-item active container-fluid">
         <h2 class="testimonial-text">Andrew is a pleasure to work with. An absolute gem.</h2>
-        <img class="testimonial-img" src="images/ashley-profile.png" alt="Ashley Profile Picture">
+        <img class="testimonial-img" src="ashley-profile.png" alt="Ashley Profile Picture">
         <em>His sister</em>
       </div>
       <div class="carousel-item container-fluid">
         <h2 class="testimonial-text">What are you waiting for? Hire him already!</h2>
-        <img class="testimonial-img" src="images/ashley-profile.png" alt="Ashley Profile Picture">
+        <img class="testimonial-img" src="ashley-profile.png" alt="Ashley Profile Picture">
         <em>Again, his sister.</em>
       </div>
     </div>
