Recommit Entire Project - 2nd Time

--- a/resume.html
+++ b/resume.html
@@ -49,9 +49,19 @@
         </nav>
     </section>
 
+    <!-- Printable Download -->
+    
+    <section class="white-section resume-download">
+        <h1>Printable PDF Resume</h1>
+        <div class="container-fluid">
+              <button type="button" class="btn btn-dark btn-lg download-button"></i> Download</button>
+        </div>
+    </section>
+
+
     <!-- Testimonials -->
 
-<section class="white-section"id="testimonials">
+<section class="colored-section"id="testimonials">
 
   <div id="testimonials-carousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
@@ -78,12 +88,6 @@
 
 </section>
 
-<section class="colored-section resume-download">
-    <h1>Printable PDF Resume</h1>
-    <div class="container-fluid">
-          <button type="button" class="btn btn-dark btn-lg download-button"></i> Download</button>
-    </div>
-</section>
 
 <!-- Footer -->
 
