--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <!-- Header-->
   <div class="container">
-    <img src="images\header-background.jpg" alt="Andrew Profile Picture" style="width:100%;">
+    <img class="header-image" src="images\header-background.jpg" alt="Andrew Profile Picture" >
     <div class="content">
       <h1>Hi, I'm Andrew.</h1>
       <p>I love to smile and make people laugh. I’m a “make each day better than the last” kind of person. Creating online content and establishing my online presence has been my passion for the past few years.</p>
